build_errors_2.log
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/wilfred/Soroban/Sanctifier/Sanctifier/contracts/kani-poc/Cargo.toml
workspace: /home/wilfred/Soroban/Sanctifier/Sanctifier/Cargo.toml
    Checking sanctifier-core v0.1.0 (/home/wilfred/Soroban/Sanctifier/Sanctifier/tooling/sanctifier-core)
warning: unexpected `cfg` condition value: `testutils`
 --> contracts/vulnerable-contract/src/lib.rs:4:1
  |
4 | #[contract]
  | ^^^^^^^^^^^
  |
  = note: no expected values for `feature`
  = note: using a cfg inside a attribute macro will use the cfgs from the destination crate and not the ones from the defining crate
  = help: try referring to `contract` crate for guidance on how handle this unexpected cfg
  = help: the attribute macro `contract` may come from an old version of the `soroban_sdk_macros` crate, try updating your dependency with `cargo update -p soroban_sdk_macros`
  = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
  = note: `#[warn(unexpected_cfgs)]` on by default
  = note: this warning originates in the attribute macro `contract` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `testutils`
 --> contracts/vulnerable-contract/src/lib.rs:7:1
  |
7 | #[contractimpl]
  | ^^^^^^^^^^^^^^^
  |
  = note: no expected values for `feature`
  = note: using a cfg inside a attribute macro will use the cfgs from the destination crate and not the ones from the defining crate
  = help: try referring to `contractimpl` crate for guidance on how handle this unexpected cfg
  = help: the attribute macro `contractimpl` may come from an old version of the `soroban_sdk_macros` crate, try updating your dependency with `cargo update -p soroban_sdk_macros`
  = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
  = note: this warning originates in the attribute macro `contractimpl` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `testutils`
 --> contracts/vulnerable-contract/src/lib.rs:7:1
  |
7 | #[contractimpl]
  | ^^^^^^^^^^^^^^^
  |
  = note: no expected values for `feature`
  = note: using a cfg inside a attribute macro will use the cfgs from the destination crate and not the ones from the defining crate
  = help: try referring to `soroban_sdk::contractclient` crate for guidance on how handle this unexpected cfg
  = help: the attribute macro `soroban_sdk::contractclient` may come from an old version of the `soroban_sdk_macros` crate, try updating your dependency with `cargo update -p soroban_sdk_macros`
  = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
  = note: this warning originates in the attribute macro `soroban_sdk::contractclient` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `admin`
  --> contracts/vulnerable-contract/src/lib.rs:19:13
   |
19 |         let admin: Symbol = env
   |             ^^^^^ help: if this is intentional, prefix it with an underscore: `_admin`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unexpected `cfg` condition value: `testutils`
  --> contracts/kani-poc/src/lib.rs:52:1
   |
52 | #[contract]
   | ^^^^^^^^^^^
   |
   = note: no expected values for `feature`
   = note: using a cfg inside a attribute macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `contract` crate for guidance on how handle this unexpected cfg
   = help: the attribute macro `contract` may come from an old version of the `soroban_sdk_macros` crate, try updating your dependency with `cargo update -p soroban_sdk_macros`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: requested on the command line with `-W unexpected-cfgs`
   = note: this warning originates in the attribute macro `contract` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `testutils`
  --> contracts/kani-poc/src/lib.rs:55:1
   |
55 | #[contractimpl]
   | ^^^^^^^^^^^^^^^
   |
   = note: no expected values for `feature`
   = note: using a cfg inside a attribute macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `contractimpl` crate for guidance on how handle this unexpected cfg
   = help: the attribute macro `contractimpl` may come from an old version of the `soroban_sdk_macros` crate, try updating your dependency with `cargo update -p soroban_sdk_macros`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: this warning originates in the attribute macro `contractimpl` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `testutils`
  --> contracts/kani-poc/src/lib.rs:55:1
   |
55 | #[contractimpl]
   | ^^^^^^^^^^^^^^^
   |
   = note: no expected values for `feature`
   = note: using a cfg inside a attribute macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `soroban_sdk::contractclient` crate for guidance on how handle this unexpected cfg
   = help: the attribute macro `soroban_sdk::contractclient` may come from an old version of the `soroban_sdk_macros` crate, try updating your dependency with `cargo update -p soroban_sdk_macros`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: this warning originates in the attribute macro `soroban_sdk::contractclient` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: `vulnerable-contract` (lib) generated 4 warnings
warning: `kani-poc-contract` (lib) generated 3 warnings
error: struct is not supported in `trait`s or `impl`s
   --> tooling/sanctifier-core/src/lib.rs:609:1
    |
609 | struct EventVisitor {
    | ^^^^^^^^^^^^^^^^^^^
    |
    = help: consider moving the struct out to a nearby module scope

error: implementation is not supported in `trait`s or `impl`s
   --> tooling/sanctifier-core/src/lib.rs:616:1
    |
616 | impl<'ast> Visit<'ast> for EventVisitor {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = help: consider moving the implementation out to a nearby module scope

error: implementation is not supported in `trait`s or `impl`s
   --> tooling/sanctifier-core/src/lib.rs:647:1
    |
647 | impl EventVisitor {
    | ^^^^^^^^^^^^^^^^^
    |
    = help: consider moving the implementation out to a nearby module scope

error[E0422]: cannot find struct, variant or union type `EventVisitor` in this scope
   --> tooling/sanctifier-core/src/lib.rs:598:27
    |
598 |         let mut visitor = EventVisitor {
    |                           ^^^^^^^^^^^^ not found in this scope

warning: unused imports: `AssertUnwindSafe` and `self`
 --> tooling/sanctifier-core/src/lib.rs:4:18
  |
4 | use std::panic::{self, AssertUnwindSafe};
  |                  ^^^^  ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `UpgradeReport: std::default::Default` is not satisfied
    --> tooling/sanctifier-core/src/lib.rs:540:9
     |
 540 |         with_panic_guard(|| self.analyze_upgrade_patterns_impl(source))
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `UpgradeReport`
     |
note: required by a bound in `with_panic_guard`
    --> tooling/sanctifier-core/src/lib.rs:1462:8
     |
1459 | fn with_panic_guard<F, R>(f: F) -> R
     |    ---------------- required by a bound in this function
...
1462 |     R: Default,
     |        ^^^^^^^ required by this bound in `with_panic_guard`
help: consider annotating `UpgradeReport` with `#[derive(Default)]`
     |
  77 + #[derive(Default)]
  78 | pub struct UpgradeReport {
     |

Some errors have detailed explanations: E0277, E0422.
For more information about an error, try `rustc --explain E0277`.
warning: `sanctifier-core` (lib) generated 1 warning
error: could not compile `sanctifier-core` (lib) due to 5 previous errors; 1 warning emitted
